--- a/public/style/WeightMeter.css
+++ b/public/style/WeightMeter.css
@@ -10,3 +10,13 @@
     overflow: hidden;
     margin: 100px auto;
 }
+
+.rb{
+    background-color: indianred;
+    transform: scale(1, 1);
+}
+
+.rb:hover{
+    background-color: coral;
+    transform: scale(110%, 110%);
+}
